# dataloom

./: .gitignore  AGENTS.md  CLAUDE.md  main.py  pyproject.toml
.pepper/: install-manifest.json
configs/: exp1_full.yaml  exp2_full.yaml  exp3_full.yaml  exp3_smoke.yaml  exp4_full.yaml  expA_full.yaml  expA_smoke.yaml  expB_full.yaml  expB_smoke.yaml
docs/: experiments.md  model.md  theory.tex
notebooks/: __dev_setup.py  exp_analysis.ipynb
paper/: state.yaml
paper/conference/: main.tex  neurips_2026.sty  references.bib  target.yaml
paper/shared/: claims.md  context.md  figure-plan.md
results/: full_run_summary.md
results/exp1_phase_diagram__dba54d7__20260503T055958__dirty/: env.json
results/exp1_phase_diagram__dba54d7__20260503T060629__dirty/: config.yaml  env.json
results/exp1_phase_diagram__dba54d7__20260503T065327__dirty/: config.yaml  env.json
results/exp2_adaptive__dba54d7__20260503T061135__dirty/: config.yaml  env.json
results/exp2_adaptive__dba54d7__20260503T065912__dirty/: config.yaml  env.json
results/exp3_multichannel__dba54d7__20260503T065953__dirty/: env.json
results/exp4_inference__dba54d7__20260503T070016__dirty/: config.yaml  env.json
results/expA_tabular__dba54d7__20260503T070032__dirty/: env.json
scripts/: analyze_run.py  build_notebook.py  run_experiment.py  run_remaining_smokes.sh
src/dataloom/: oracle.py  (+4 more)
tests/: test_adaptive.py  test_causal.py  test_estimator_api.py  test_exp1_sanity.py  test_gaussian_fast_mean.py  test_inference.py  test_multichannel.py  test_oracle.py  test_schema.py  test_seeds.py  test_tabular.py
(+300 files in other folders)
