[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataloom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "joblib>=1.4",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "pyarrow>=24.0.0",
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.0",
    "jupyterlab>=4.4.10",
    "notebook>=7.4.7",
    "pytest>=8.4.2",
]
